Corrección de errores varios en controladores
