# backend/src/main/resources/openapi.yaml
@@ -365,13 +365,13 @@ paths:
         "404":
           description: No se pudo crear la reserva
 
-  /reservas/{id}:
+  /reservas/{reservaId}:
     get:
-      summary: Obtener una reserva por ID
+      summary: Obtener una reserva por ID de reserva
       tags:
         - Reserva
       parameters:
-        - name: id
+        - name: reservaId
           in: path
           required: true
           schema:
@@ -1406,3 +1406,39 @@ components:
       required:
         - alojamientoId
         - servicioId
+
+
+  /reservas/usuario/{usuarioId}:
+    get:
+      summary: Listar reservas por ID de usuario
+      tags:
+        - Reserva
+      parameters:
+        - name: usuarioId
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: ID del usuario
+      responses:
+        "200":
+          description: Lista de reservas del usuario obtenida con éxito
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ReservaDTO"
+              example:
+                - id: 10
+                  alojamientoId: 3
+                  usuarioId: 5
+                  fechaInicio: "2025-10-01"
+                  fechaFin: "2025-10-05"
+                - id: 11
+                  alojamientoId: 7
+                  usuarioId: 5
+                  fechaInicio: "2025-11-10"
+                  fechaFin: "2025-11-12"
+        "404":
+          description: Usuario o reservas no encontradas
